2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c: Disable -Wcast-align.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Enable objconv errors 2030, 2050 and 2031
	as they are fatal.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.am (rs_decoder.S): Add missing -ffreestanding.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (escape_of_path): Fix double free.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videoinfo.c (hook): Show pitch.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Skip xen-syms.

2012-06-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (escape_of_path): Don't add ieee1275/.
	(probe): Add ieee1275 to OFW devices.

2012-06-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/ofpath.c (of_path_of_scsi): Fix wrong format specifier.

2012-06-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle IBM OFW path.

	* util/ieee1275/ofpath.c (find_obppath): Use devspec if obppath isn't
	available.
	(of_path_of_scsi): Handle vdevice.

2012-06-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/mmap/i386/pc/mmap.c (malloc_hook):
	Allocate in multiples of 16 to avoid adding a few bytes free region the
	windows bugs upon.

2012-06-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/drivemap.c (install_int13_handler):
	Allocate in multiples of 16 to avoid adding a few bytes free region the
	windows bugs upon.
	* grub-core/mmap/i386/pc/mmap.c (malloc_hook): Likewise.

2012-06-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/efi_gop.c (grub_video_gop_setup): Reject invalid
	resolutions.
	* grub-core/video/i386/pc/vbe.c (grub_vbe_get_preferred_mode): Likewise.
	* grub-core/video/video.c (grub_video_edid_preferred_mode): Likewise.

2012-06-02  Isao Shimizu  <isaoshimizu@gmail.com>
